<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <com.simplemobiletools.camera.views.AutoFitTextureView
        android:id="@+id/camera_texture_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_alignParentRight="true"
        android:padding="@dimen/normal_margin"
        android:src="@drawable/ic_settings_cog"/>

    <ImageView
        android:id="@+id/toggle_photo_video"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_below="@+id/settings"
        android:layout_alignParentRight="true"
        android:padding="@dimen/normal_margin"
        android:src="@drawable/ic_video"/>
...
        android:layout_height="@dimen/icon_size"
        android:layout_below="@+id/filterToggle"
        android:layout_alignParentRight="true"
        android:padding="@dimen/medium_margin"/>

    <ImageView
        android:id="@+id/toggle_voice"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_below="@+id/last_photo_video_preview"
        android:layout_alignParentRight="true"
        android:padding="@dimen/medium_margin"
        android:src="@drawable/microphone"/>
...
        android:layout_below="@+id/toggle_geotag"
        android:layout_alignParentRight="true"
        android:padding="@dimen/medium_margin"
        android:src="@drawable/qr"/>

    <LinearLayout
        android:id="@+id/btn_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|bottom">

        <ImageView
...
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_camera_front"/>

        <ImageView
            android:id="@+id/shutter"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:src="@drawable/ic_shutter"/>

        <ImageView
...
