package com.simplemobiletools.camera.activities

import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.rule.ActivityTestRule
import androidx.test.rule.GrantPermissionRule
import androidx.test.filters.LargeTest
import com.simplemobiletools.camera.R
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.TypeSafeMatcher
import org.junit.Rule
import org.junit.Test

@LargeTest
class VoiceActivationTest {

    @Rule
    @JvmField
    var mActivityTestRule = ActivityTestRule(SplashActivity::class.java)

    @Rule
    @JvmField
    var mGrantPermissionRule =
            GrantPermissionRule.grant(
                    "android.permission.CAMERA",
                    "android.permission.RECORD_AUDIO",
                    "android.permission.WRITE_EXTERNAL_STORAGE")

    @Test
    fun voiceActivationTest() {
        // Added a sleep statement to match the app's execution delay.
        Thread.sleep(6000)
        try {
            // Open settings.
            val appCompatImageView = onView(
                    allOf(withId(R.id.settings),
                            childAtPosition(
                                    allOf(withId(R.id.view_holder),
                                            childAtPosition(
                                                    withId(android.R.id.content),
                                                    0)),
                                    1),
                            isDisplayed()))
            appCompatImageView.perform(click())
        } catch (E: Exception) {
            print("Settings Error")
        }
        // Added a sleep statement to match the app's execution delay.
        Thread.sleep(2000)
        try {
            // Toggle voice activation on.
            val appCompatImageView2 = onView(
                    allOf(withId(R.id.toggle_voice),
                            childAtPosition(
                                    allOf(withId(R.id.view_holder),
                                            childAtPosition(
                                                    withId(android.R.id.content),
                                                    0)),
                                    6),
                            isDisplayed()))
            appCompatImageView2.perform(click())
        } catch (E: Exception) {
            print("Toggle Voice Error")
        }
        // Added a sleep statement to match the app's execution delay.
        // It is assumed that a user would use their voice to activate picture capture at this point.
        Thread.sleep(6000)
        try {
            // Open settings.
            val appCompatImageView3 = onView(
                    allOf(withId(R.id.settings),
                            childAtPosition(
                                    allOf(withId(R.id.view_holder),
                                            childAtPosition(
                                                    withId(android.R.id.content),
                                                    0)),
                                    1),
                            isDisplayed()))
            appCompatImageView3.perform(click())
        } catch (E: Exception) {
            print("Settings Error")
        }
        // Added a sleep statement to match the app's execution delay.
        Thread.sleep(2000)
        try {
            // Toggle voice activation off.
            val appCompatImageView4 = onView(
                    allOf(withId(R.id.toggle_voice),
                            childAtPosition(
                                    allOf(withId(R.id.view_holder),
                                            childAtPosition(
                                                    withId(android.R.id.content),
                                                    0)),
                                    6),
                            isDisplayed()))
            appCompatImageView4.perform(click())
        } catch (E: Exception) {
            print("Toggle Voice Error")
        }
    }

    private fun childAtPosition(parentMatcher: Matcher<View>, position: Int): Matcher<View> {
        return object : TypeSafeMatcher<View>() {
            override fun describeTo(description: Description) {
                description.appendText("Child at position $position in parent ")
                parentMatcher.describeTo(description)
            }

            public override fun matchesSafely(view: View): Boolean {
                val parent = view.parent
                return parent is ViewGroup && parentMatcher.matches(parent) && view == parent.getChildAt(position)
            }
        }
    }
}
